tests/golden/plugin_syntax_error.out
tests/golden/plugin_syntax_error.bean: [[31mError[0m] Failed to load plugin plugin_syntax_error: [string "[plugin: plugin_syntax_error]"]:5: 'end' expected (to close 'if' at line 3) near <eof> (LuaSyntax)

    1 | plugin "plugin_syntax_error"
               [31m^^^^^^^^^^^^^^^^^^^^^[0m

Assets
└ Cash
