tests/golden/plugin_syntax_error.bean
plugin "plugin_syntax_error"

2024-01-01 open Assets:Cash USD
